--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   </ul>
                   <div class="st-text-block-btn">
                     <a
-                      href="https://drive.google.com/file/d/1M-pbJ8FaZ-0azdJoR-BXhe_voWHOGQr5/view?usp=sharing"
+                      href="https://drive.google.com/file/d/1ecAz2scv2ZlsPPgjgF2nKAxVEhD7dtg6/view?usp=drivesdk"
                       class="st-btn st-style1 st-color1"
                       >Get CV</a
                     >
@@ -685,18 +685,18 @@
               <div class="st-resume-timeline-wrap">
                 <div class="st-resume-timeline">
                   <h3 class="st-resume-timeline-title">
-                    National Diploma Mechanical Engineering
+                    National Diploma Computer Engineering
                   </h3>
-                  <div class="st-resume-timeline-duration">2013 - 2015</div>
+                  <div class="st-resume-timeline-duration">2020 - 2023</div>
                   <h4 class="st-resume-timeline-subtitle">
                     The Federal Polytechnic, Ilaro
                   </h4>
                   <div class="st-resume-timeline-text">
-                    <p>Graduate with Distinction</p>
+                    <p>Graduate with Upper Credit</p>
                   </div>
                 </div>
                 <!-- st-resume-timeline -->
-                <div class="st-height-b50 st-height-lg-b30"></div>
+                <!-- <div class="st-height-b50 st-height-lg-b30"></div>
                 <div class="st-resume-timeline">
                   <h3 class="st-resume-timeline-title">
                     Higher National Diploma
@@ -708,7 +708,7 @@
                   <div class="st-resume-timeline-text">
                     <p>Graduate with Upper Credit</p>
                   </div>
-                </div>
+                </div> -->
                 <!-- st-resume-timeline -->
                 <div class="st-height-b50 st-height-lg-b30"></div>
                 <div class="st-resume-timeline">
@@ -749,14 +749,14 @@
               <div class="st-portfolio-item">
                 <a href="images/perfect touch mockup.jpg" class="st-portfolio">
                   <div class="st-portfolio-img st-zoom-in">
-                    <img src="images/p1_perfecttouch.png" alt="portfolio" />
+                    <img src="images/globalProject.png" alt="portfolio" />
                   </div>
                   <div class="st-portfolio-item-hover">
                     <i class="fas fa-plus-circle"> </i>
                   </div>
                 </a>
                 <button class="btn btn-success">
-                  <a href="https://smartrove.github.io/perfecttouch/"
+                  <a href="https://adefalu4real.github.io/globalBootstrap/"
                     >view demo</a
                   >
                 </button>
@@ -771,14 +771,14 @@
                   class="st-portfolio"
                 >
                   <div class="st-portfolio-img st-zoom-in">
-                    <img src="images/p2_electromech.png" alt="portfolio" />
+                    <img src="images/figma.png" alt="portfolio" />
                   </div>
                   <div class="st-portfolio-item-hover">
                     <i class="fas fa-plus-circle"></i>
                   </div>
                 </a>
                 <button class="btn btn-success">
-                  <a href="https://smartrove.github.io/globaleletromech/"
+                  <a href="https://adefalu4real.github.io/figmaProject/"
                     >view demo</a
                   >
                 </button>
@@ -790,14 +790,16 @@
               <div class="st-portfolio-item">
                 <a href="images/balshakmockup.jpg" class="st-portfolio">
                   <div class="st-portfolio-img st-zoom-in">
-                    <img src="images/p3_balshak.png" alt="portfolio" />
+                    <img src="images/sodmar.png" alt="portfolio" />
                   </div>
                   <div class="st-portfolio-item-hover">
                     <i class="fas fa-plus-circle"></i>
                   </div>
                 </a>
                 <button class="btn btn-success">
-                  <a href="https://smartrove.github.io/balshak/">view demo</a>
+                  <a href="https://adefalu4real.github.io/sodmarConcept/"
+                    >view demo</a
+                  >
                 </button>
               </div>
             </div>
