--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                       </g>
                     </g>
                   </svg>
-                  <div class="sp-phone-no">+234 816-880-0815</div>
+                  <div class="sp-phone-no">+234 814-184-2328</div>
                 </div>
               </div>
             </div>
@@ -710,7 +710,7 @@
                   </div>
                 </div> -->
                 <!-- st-resume-timeline -->
-                <div class="st-height-b50 st-height-lg-b30"></div>
+                <!-- <div class="st-height-b50 st-height-lg-b30"></div>
                 <div class="st-resume-timeline">
                   <h3 class="st-resume-timeline-title">
                     Diploma In Desktop Publishing
@@ -720,7 +720,7 @@
                   <div class="st-resume-timeline-text">
                     <p>Graduate with Distinction</p>
                   </div>
-                </div>
+                </div> -->
                 <!-- st-resume-timeline -->
               </div>
             </div>
@@ -1310,23 +1310,25 @@
                 <i class="fas fa-envelope"></i>
                 <div class="st-single-info-details">
                   <h4>Email</h4>
-                  <a href="#">olaokunolalekan@gmail.com</a>
-                  <a href="#">wasiuolalekan20@yahoo.com</a>
+                  <a href="#">waliyyu9@gmail.com</a>
+                  <a href="#">adefalu4real@gmail.com</a>
                 </div>
               </div>
               <div class="st-single-contact-info">
                 <i class="fas fa-phone-alt"></i>
                 <div class="st-single-info-details">
                   <h4>Phone</h4>
-                  <span>+234 816-880-0815</span>
-                  <span>+234 813-788-5535</span>
+                  <span>+234 814-184-2328</span>
+                  <span>+234 812-240-0285</span>
                 </div>
               </div>
               <div class="st-single-contact-info">
                 <i class="fas fa-map-marker-alt"></i>
                 <div class="st-single-info-details">
                   <h4>Address</h4>
-                  <span>14 Argbeyo St. Ilaro, <br />Ogun state, Nigeria.</span>
+                  <span
+                    >4 Opeoluwa St. Idiroko, <br />Ogun state, Nigeria.</span
+                  >
                 </div>
               </div>
               <div class="st-social-info">
@@ -1373,7 +1375,7 @@
       <div class="container">
         <div class="st-copyright-wrap text-center">
           <div class="st-copyright-text">
-            © 2022. Designed by Smartrove Designs. All right reserved.
+            © 2022. Designed by Adefalu4real Designs. All right reserved.
           </div>
         </div>
       </div>
